# Chatgpt-Security-Extension

./: .gitignore  API_INTEGRATION_FIX_SUMMARY.md  BACKEND_API_SERVICE_INTEGRATION.md  BACKEND_AUTH_FIX.md  BACKEND_DEPENDENCY_IMPLEMENTATION.md  BACKEND_MANDATORY_UPDATE.md  BACKEND_ONLY_INTEGRATION_SUMMARY.md  CHANGELOG.md  COMPLETE_IMPLEMENTATION_COMPLETE.md  COMPLETE_IMPLEMENTATION_STATUS.md  COMPLETE_LOGGING_SETUP.md  COMPLETE_SOLUTION_SUMMARY.md  CURL_TEST_COMMANDS.md  ENHANCED_LOGGING_SUMMARY.md  FILE_SENSITIVITY_INTEGRATION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_LOGGING_IMPLEMENTATION.md  HTTP_400_FIX_PLAN.md  IMPLEMENTATION_PLAN.md  INTEGRATION_SUMMARY.md  INTEGRATION_TESTING_GUIDE.md  PROMPT_ANALYSIS_INTEGRATION.md  PROMPT_FLOW_VERIFICATION.md  PROMPT_GUARD_IMPLEMENTATION.md  PROMPT_TESTING_GUIDE.md  QUICK_START.md  README.md  ROLLBACK_SUMMARY.md  TESTING_GUIDE.md  TEST_API_ENDPOINTS.md  UNIFIED_LOGGING_INTEGRATION.md  WEBSOCKET_IMPLEMENTATION.md  WEBSOCKET_TEST_RESULTS.md  debug_extension.py  debug_prompt_flow.md  integration-test.html  openapi.json  package.json  pnpm-lock.yaml  test-env-file.env  (+6 more)
backend/: .env.example  .gitignore  ADD_CLIENT_APP_ENDPOINT_SUMMARY.md  API_ENDPOINTS.md  API_ENDPOINTS_UPDATED.md  ENDPOINT_FIXES_SUMMARY.md  ENV_EXAMPLE.txt  FOLDER_STRUCTURE.md  INTEGRATION_COMPLETE.md  INTEGRATION_TEST_REPORT.md  METRICS_CALCULATION.md  README.md  README_CORS.md  REALTIME_METRICS.md  alembic.ini  debug_client_endpoints.py  env.example  init_data.py  pyproject.toml  pytest.ini  seed_data.py  setup.ps1  test_api_endpoints.py  test_backend_endpoints.py  test_client_interactions_api.py  test_complete_integration.py  test_comprehensive_integration.py  test_endpoints.py  test_endpoints_final.py  test_file_scanning_integration.py  test_file_scanning_simple.py  test_final_integration.py  test_final_integration_verification.py  test_frontend_backend_integration.py  test_prompt_analysis_comprehensive.py  test_websocket.py
backend/alembic/: env.py
backend/app/: main.py
backend/audit_logs/: audit_20251010.jsonl  audit_20251011.jsonl  audit_20251013.jsonl  audit_20251017.jsonl  audit_20251018.jsonl  audit_20251019.jsonl  audit_20251020.jsonl  audit_20251021.jsonl  audit_20251022.jsonl  audit_20251023.jsonl  audit_20251024.jsonl  audit_20251025.jsonl
backend/config/: sensitive_file_patterns.json
backend/scripts/: README.md  check_metrics_db.py  demo_metrics_calculation.py  fix_existing_passwords.py  run_seed.py  seed_complete_data.py  seed_dashboard_data.py  seed_data.py  seed_minimal_data.py  seed_mock_data.py  seed_usage_data.py  test_ai_inventory.py  test_auth.py  test_cors.sh  test_metrics_update.py  test_realtime_metrics.py  test_seeding.py  update_metrics.py
backend/tests/: test_cors_analyze.py
(+206 files in other folders)
